新增 3Q